--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "firebase": "^7.17.1",
     "next": "9.4.4",
     "react": "16.13.1",
