TypeScript (ESLint) & Prettier
- converted all files to typescript
- added eslint/prettier npm commands
- made all files pass eslint
- added precommit routine w/husky

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write --config .prettierrc '*/**/*.{json,js,jsx,ts,tsx}'",
+    "lint": "eslint --max-warnings 0 '*/**/*.{json,js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -14,5 +16,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-react": "^7.20.3",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && npm run lint"
+    }
   }
 }
