--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.26.10"
   },
   "devDependencies": {
+    "@types/react": "^16.9.43",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "eslint": "^7.5.0",
@@ -28,7 +29,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format && npm run lint"
+      "pre-commit": "npm run format && npm run lint && npm run build"
     }
   }
 }
