--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write --config .prettierrc '*/**/*.{json,js,jsx,ts,tsx}'",
+    "format": "prettier --write --config .prettierrc '*/**/*.{json,js,jsx,ts,tsx,css,scss}'",
     "lint": "eslint --max-warnings 0 '*/**/*.{json,js,jsx,ts,tsx}'"
   },
   "dependencies": {
